@@ -1,3 +1,10 @@
+2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/plaf/metal/MetalLookAndFeel.java
+	(createDefaultTheme): Corrected API docs,
+	(initComponentDefaults): Added entry for 'TitledBorder.border',
+	(getCurrentTheme): Initialise theme if it is null.
+
 2006-07-07  Roman Kennke  <kennke@aicas.com>
 
 	* java/awt/Component.java
